--- a/code/DocsSample/Security/UniversalKeystoreKit/KeyUsage/SigningVerification/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/Security/UniversalKeystoreKit/KeyUsage/SigningVerification/entry/src/main/cpp/CMakeLists.txt
@@ -11,5 +11,14 @@ endif()
 include_directories(${NATIVERENDER_ROOT_PATH}
                     ${NATIVERENDER_ROOT_PATH}/include)
 
-add_library(entry SHARED napi_init.cpp)
+# 添加所有 cpp 文件到编译
+add_library(entry SHARED
+    napi_init.cpp
+    ecc_sha256_sign_verify.cpp
+    rsa_sha384_pss_sign_verify.cpp
+    sm2_sm3_sign_verify.cpp
+    sm2_nodigest_sign_verify.cpp
+    rsa_sha256_pss_sign_verify.cpp
+    rsa_sha256_pkcs1_v1_5_sign_verify.cpp)
+
 target_link_libraries(entry PUBLIC libace_napi.z.so libhuks_ndk.z.so)
