--- a/code/DocsSample/ArkUISample/AccessibilityCapi/entry/build-profile.json5
+++ b/code/DocsSample/ArkUISample/AccessibilityCapi/entry/build-profile.json5
@@ -24,6 +24,11 @@
       "path": "./src/main/cpp/CMakeLists.txt",
       "arguments": "",
       "cppFlags": "",
+      "abiFilters": [
+        "arm64-v8a",
+        "x86_64",
+        "armeabi-v7a"
+      ]
     }
   },
   "buildOptionSet": [
