--- a/code/DocsSample/pasteboard/pasteboard_NDK_sample/build-profile.json5
+++ b/code/DocsSample/pasteboard/pasteboard_NDK_sample/build-profile.json5
@@ -19,9 +19,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.0(20)",
-        "compatibleSdkVersion": "6.0.0(20)",
-        "runtimeOS": "HarmonyOS",
+        "compileSdkVersion": 21,
+        "compatibleSdkVersion": 21,
+        "targetSdkVersion": 21,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "nativeCompiler": "BiSheng",
           "strictMode": {
