--- a/code/DocsSample/pasteboard/pasteboard_arkts_sample/entry/src/main/module.json5
+++ b/code/DocsSample/pasteboard/pasteboard_arkts_sample/entry/src/main/module.json5
@@ -20,7 +20,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
