--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,5 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.dll filter=lfs diff=lfs merge=lfs -text
 *.har filter=lfs diff=lfs merge=lfs -text
+*.ms filter=lfs diff=lfs merge=lfs -text
+*.MP4 filter=lfs diff=lfs merge=lfs -text
