--- a/code/DocsSample/ArkUISample/ArkUIWindowSamples/CreateSubWindow/entry/src/main/module.json5
+++ b/code/DocsSample/ArkUISample/ArkUIWindowSamples/CreateSubWindow/entry/src/main/module.json5
@@ -19,7 +19,8 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "default"
+      "default",
+      "tablet"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
