--- a/code/DocsSample/graphic/ArkGraphics3D/build-profile.json5
+++ b/code/DocsSample/graphic/ArkGraphics3D/build-profile.json5
@@ -19,8 +19,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 14,
-        "compatibleSdkVersion": 14,
+        "compileSdkVersion": 20,
+        "targetSdkVersion": 20,
+        "compatibleSdkVersion": 20,
         "runtimeOS": "OpenHarmony"
       }
     ],
