--- a/code/DocsSample/ArkTS/NodeAPI/NodeAPIClassicUseCases/NodeAPIApplicationScenario/entry/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/ArkTS/NodeAPI/NodeAPIClassicUseCases/NodeAPIApplicationScenario/entry/src/main/cpp/CMakeLists.txt
@@ -1,12 +1,15 @@
 # the minimum version of CMake.
-cmake_minimum_required(VERSION 3.4.1)
-project(MyApplication)
+cmake_minimum_required(VERSION 3.5.0)
+project(MyApplication3)
 
 set(NATIVERENDER_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
+if(DEFINED PACKAGE_FIND_FILE)
+    include(${PACKAGE_FIND_FILE})
+endif()
+add_definitions( "-DLOG_TAG=\"LOG_TAG\"" )
 include_directories(${NATIVERENDER_ROOT_PATH}
                     ${NATIVERENDER_ROOT_PATH}/include)
+
 add_library(entry SHARED napi_init.cpp)
 target_link_libraries(entry PUBLIC libace_napi.z.so libhilog_ndk.z.so)
-add_library(entry1 SHARED thread_safety.cpp)
-target_link_libraries(entry1 PUBLIC libace_napi.z.so libhilog_ndk.z.so)
