--- a/code/BasicFeature/Security/FilePreviewDLP/build-profile.json5
+++ b/code/BasicFeature/Security/FilePreviewDLP/build-profile.json5
@@ -20,7 +20,8 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compatibleSdkVersion": "5.0.1(13)",
+        "compatibleSdkVersion": "13",
+        "compileSdkVersion": "13",
         "runtimeOS": "HarmonyOS",
         "buildOption": {
           "strictMode": {
