--- a/code/BasicFeature/Native/NdkVulkanExternalMemory/build-profile.json5
+++ b/code/BasicFeature/Native/NdkVulkanExternalMemory/build-profile.json5
@@ -20,9 +20,10 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "5.0.5(17)",
-        "compatibleSdkVersion": "5.0.0(12)",
-        "runtimeOS": "HarmonyOS",
+        "compileSdkVersion": 18,
+        "compatibleSdkVersion": 18,
+        "targetSdkVersion": 18,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
