--- a/code/DocsSample/ArkUIWindowPipSamples/WindowPip/oh-package.json5
+++ b/code/DocsSample/ArkUIWindowPipSamples/WindowPip/oh-package.json5
@@ -14,12 +14,12 @@
 */
 
 {
-  "modelVersion": "6.0.0",
+  "modelVersion": "5.0.5",
   "description": "Please describe the basic information.",
   "dependencies": {
   },
   "devDependencies": {
-    "@ohos/hypium": "1.0.24",
-    "@ohos/hamock": "1.0.1-rc2"
+    "@ohos/hypium": "1.0.19",
+    "@ohos/hamock": "1.0.0"
   }
 }
