--- a/code/DocsSample/Form/FormStandaloneDemo/entry/src/main/module.json5
+++ b/code/DocsSample/Form/FormStandaloneDemo/entry/src/main/module.json5
@@ -22,7 +22,7 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
-      "phone"
+      "default"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
