--- a/code/DocsSample/MechanicManagerSample/build-profile.json5
+++ b/code/DocsSample/MechanicManagerSample/build-profile.json5
@@ -19,9 +19,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "targetSdkVersion": "6.0.1(21)",
-        "compatibleSdkVersion": "6.0.1(21)",
-        "runtimeOS": "HarmonyOS",
+        "targetSdkVersion": 20,
+        "compatibleSdkVersion": 20,
+        "runtimeOS": "OpenHarmony",
         "buildOption": {
           "strictMode": {
             "caseSensitiveCheck": true,
