--- a/code/BasicFeature/Media/Audio/oh-package.json5
+++ b/code/BasicFeature/Media/Audio/oh-package.json5
@@ -14,14 +14,12 @@
 */
 
 {
-  "modelVersion": "5.0.2",
-  "license": "ISC",
-  "devDependencies": {
-    "@ohos/hypium": "1.0.6"
+  "modelVersion": "5.0.5",
+  "description": "Please describe the basic information.",
+  "dependencies": {
   },
-  "name": "audiosample",
-  "description": "example description",
-  "repository": {},
-  "version": "1.0.0",
-  "dependencies": {}
+  "devDependencies": {
+    "@ohos/hypium": "1.0.24",
+    "@ohos/hamock": "1.0.0"
+  }
 }
