--- a/code/DocsSample/UserAuthentication/build-profile.json5
+++ b/code/DocsSample/UserAuthentication/build-profile.json5
@@ -19,8 +19,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compileSdkVersion": 20,
-        "compatibleSdkVersion": 20,
+        "targetSdkVersion": 22,
+        "compileSdkVersion": 22,
+        "compatibleSdkVersion": 22,
         "runtimeOS": "OpenHarmony"
       }
     ],
