--- a/code/BasicFeature/Connectivity/UploadAndDownLoad/entry/src/main/module.json5
+++ b/code/BasicFeature/Connectivity/UploadAndDownLoad/entry/src/main/module.json5
@@ -49,7 +49,7 @@
     ],
     "requestPermissions": [
       {
-        "name": "ohos.permission.READ_MEDIA",
+        "name": "ohos.permission.READ_IMAGEVIDEO",
         "reason": "$string:media_permission",
         "usedScene": {
           "abilities": [
