--- a/code/DocsSample/Basic-Services-Kit/common_event/NativeCommonEvent/AppScope/app.json5
+++ b/code/DocsSample/Basic-Services-Kit/common_event/NativeCommonEvent/AppScope/app.json5
@@ -14,7 +14,7 @@
  */
 {
   "app": {
-    "bundleName": "com.example.commoneventpublish",
+    "bundleName": "com.samples.commoneventpublish",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
