--- a/code/DocsSample/bmsSample/ModuleConfigurationFile01/entry/src/main/module.json5
+++ b/code/DocsSample/bmsSample/ModuleConfigurationFile01/entry/src/main/module.json5
@@ -54,9 +54,9 @@
       // [EndExclude module_metadata]
       // [StartExclude module_all]
       {
-        "name": "module_metadata",
-        "value": "a test demo for module metadata",
-        "resource": "$profile:shortcuts_config"
+        "name": "pageConfig",
+        "value": "main page config of application",
+        "resource": "$profile:main_pages" // 资源配置，指向profile下面定义的配置文件main_pages.json
       }
       // [EndExclude module_all]
     ],
