--- a/code/DocsSample/ArkTS/ArkTsConcurrent/ApplicationMultithreadingDevelopment/PracticalCaseSendable/entry/build-profile.json5
+++ b/code/DocsSample/ArkTS/ArkTsConcurrent/ApplicationMultithreadingDevelopment/PracticalCaseSendable/entry/build-profile.json5
@@ -24,7 +24,7 @@
       "path": "./src/main/cpp/CMakeLists.txt",
       "arguments": "",
       "cppFlags": "",
-      "abiFilters": ["armeabi-v7a", "x86_64"]
+       "abiFilters": ["armeabi-v7a", "arm64-v8a", "x86_64"]
     }
   },
   "buildOptionSet": [
