--- a/code/DocsSample/ArkWeb/UseFrontendJSApp/entry4/src/main/cpp/CMakeLists.txt
+++ b/code/DocsSample/ArkWeb/UseFrontendJSApp/entry4/src/main/cpp/CMakeLists.txt
@@ -1,6 +1,6 @@
 # the minimum version of CMake.
 cmake_minimum_required(VERSION 3.5.0)
-project(NDKJSBridg)
+project(NDKJSBridge)
 
 set(NATIVERENDER_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
