--- a/code/DocsSample/bmsSample/AppConfigurationFile/AppScope/app.json5
+++ b/code/DocsSample/bmsSample/AppConfigurationFile/AppScope/app.json5
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2025 Huawei Device Co., Ltd.
+ * Copyright (c) 2025-2026 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -62,7 +62,8 @@
       "com.ohos.screenshot",
       "com.ohos.note"
     ],
-    "startMode": "mainTask"
+    "startMode": "mainTask",
+    "buildVersion": "1"
     // [EndExclude app_json5_configuration]
     // [EndExclude app_json5_appEnvironments]
     // [EndExclude app_json5_multiAppMode]
