--- a/code/DocsSample/ArkUISample/NativeType/NativeUIPageSample/AppScope/app.json5
+++ b/code/DocsSample/ArkUISample/NativeType/NativeUIPageSample/AppScope/app.json5
@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2026 Huawei Device Co., Ltd.
+/*
+ * Copyright (c) 2025 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -12,10 +12,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-// [Start Cpp_indexes]
-// entry/src/main/cpp/types/libentry/Index.d.ts
-
-import { NodeContent } from '@kit.ArkUI';
-
-export const CreateDrawNode: (content: NodeContent) => void;
-// [End Cpp_indexes]
+{
+  "app": {
+    "bundleName": "com.example.nativeuipage",
+    "vendor": "example",
+    "versionCode": 1000000,
+    "versionName": "1.0.0",
+    "icon": "$media:layered_image",
+    "label": "$string:app_name"
+  }
+}
