--- a/code/DocsSample/ArkUISample/NativeType/NativeUIPageSample/entry/oh-package.json5
+++ b/code/DocsSample/ArkUISample/NativeType/NativeUIPageSample/entry/oh-package.json5
@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2026 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,10 +12,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-// [Start Cpp_indexes]
-// entry/src/main/cpp/types/libentry/Index.d.ts
-
-import { NodeContent } from '@kit.ArkUI';
-
-export const CreateDrawNode: (content: NodeContent) => void;
-// [End Cpp_indexes]
+{
+  "name": "entry",
+  "version": "1.0.0",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "author": "",
+  "license": "",
+  "dependencies": {
+    "libentry.so": "file:./src/main/cpp/types/libentry"
+  }
+}
