--- a/code/DocsSample/ArkUISample/NativeType/NativeUIPageSample/oh-package.json5
+++ b/code/DocsSample/ArkUISample/NativeType/NativeUIPageSample/oh-package.json5
@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (c) 2026 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,10 +12,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-// [Start Cpp_indexes]
-// entry/src/main/cpp/types/libentry/Index.d.ts
-
-import { NodeContent } from '@kit.ArkUI';
-
-export const CreateDrawNode: (content: NodeContent) => void;
-// [End Cpp_indexes]
+{
+  "modelVersion": "5.0.5",
+  "description": "Please describe the basic information.",
+  "dependencies": {
+  },
+  "devDependencies": {
+    "@ohos/hypium": "1.0.21",
+    "@ohos/hamock": "1.0.0"
+  }
+}
